--- a/config.toml
+++ b/config.toml
@@ -3,4 +3,4 @@ primaryColor="#8c20b3"
 backgroundColor="#ef9cdb"
 secondaryBackgroundColor="#262830"
 textColor="#000000"
-font="serif"
+font="Times New Roman"
