--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,5 @@
 [theme]
 primaryColor="#8c20b3"
-backgroundColor="#ef9cdb"
+backgroundColor="#fde0ed"
 secondaryBackgroundColor="#262830"
 textColor="#000000"
-font="Times New Roman"
